--- a/maandpasdemo/menu/index.html
+++ b/maandpasdemo/menu/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../static/css/bootstrap.min.css"/>
     <script src="../static/js/jquery-3.4.0.min.js"></script>
     <script src="../static/js/bootstrap.min.js"></script>
-    <script src="../static/js/base.js"></script>
+    <script src="../static/js/base.js?v=1"></script>
     <link href="../static/css/base.css" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Vesper+Libre:wght@400;500;700;900&display=swap" rel="stylesheet">
@@ -21,7 +21,15 @@
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ml-auto">
             <li class="nav-item"><a class="nav-link" href="../">Home</a></li>
-            <li class="nav-item"><a class="nav-link" href="../menu">Menu</a></li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle nav-dropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Menu
+                </a>
+                <div class="dropdown-menu">
+                    <a class="dropdown-item" href="../menu/lunch.html">Lunch Menu</a>
+                    <a class="dropdown-item" href="../menu/bakery.html">Bakery Menu</a>
+                </div>
+            </li>
             <li class="nav-item"><a class="nav-link" href="../contact">Location/Contact Us</a></li>
         </ul>
     </div>
@@ -76,58 +84,26 @@
                 <tbody>
                 <tr>
                     <td>
-                        Monday
+                        Monday - Friday
                     </td>
-                    <td id="Monday">
-
-                    </td>
-                </tr>
-                <tr>
                     <td>
-                        Tuesday
-                    </td>
-                    <td id="Tuesday">
-
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        Wednesday
-                    </td>
-                    <td id="Wednesday">
-
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        Thursday
-                    </td>
-                    <td id="Thursday">
-
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        Friday
-                    </td>
-                    <td id="Friday">
-
+                        6am - 5pm
                     </td>
                 </tr>
                 <tr>
                     <td>
                         Saturday
                     </td>
-                    <td id="Saturday">
-
+                    <td>
+                        9am - 3pm
                     </td>
                 </tr>
                 <tr>
                     <td>
                         Sunday
                     </td>
-                    <td id="Sunday">
-
+                    <td>
+                        Closed
                     </td>
                 </tr>
                 </tbody>
